2002-01-30  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-guess-type-from-name): Return nil if guess failed.
	(octet-buffer): Ask octet type if guess failed.

2002-01-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-type-filter-alist): Changed default value for
	xlhtml and ppthtml.
	(octet-filter-call2): Fixed problem when return value of call-process
	is not numeric.
	(octet-filter-call1): Ditto.
	(octet-find-file): Use unwind-protect.
	(octet-filter-call2): Fixed docstring.
	(octet-filter-call1): Ditto.
	(octet-buffer): Fixed argument for `interactive'.

2002-01-29  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-encoding-type-alist): New option.
	(w3m-local-file-type): New function.
	(w3m-local-content-type): New implementation.
	(w3m-local-attributes): Call `w3m-local-file-type' instead of
	`w3m-local-content-type'.
	(w3m-download): `url' is lexically binded.  Call `message' to
	display error messages.

	* w3mhack.el (w3mhack-examine-modules): Fix to avoid that octet.el
	is byte-compiled repeatedly.

2002-01-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3mhack.el (w3mhack-examine-modules): Add octet.el to the module list
	if FLIM is installed.

	* octet.el: New file.

2002-01-29  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-meadow.el (shimbun-headers): Fixed problem when
	yearly index is one page.

2002-01-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-highlight-current-anchor): Don't search for the anchor
	points which are out of sight.

2002-01-25  NAKAJIMA Mikio  <minakaji@osaka.email.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-make-contents): Modify regexp
	slightly.

2002-01-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-tmp-urluser-alist): New variable.
	(w3m-goto-url): If URL include user and passwd, set
	`w3m-tmp-urluser-alist' for process handling.
	Remove passwd from URL.
	(w3m): Remove passwd from URL when insert it in buffer.
